Se comenzo a trabajar la pagina Productos, creacion de carousel en la misma, se eliminaron html inncesarios e imagenes.

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
             <ul class="dropdown-menu">
-                <li><a class="dropdown-item text-dark" href="pages/auriculares.html">Auriculares</a></li>
+                <li><a class="dropdown-item text-dark" href="pages/productos.html">Auriculares</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item text-dark" href="pages/teclados.html">Teclados</a></li>
+                <li><a class="dropdown-item text-dark" href="pages/productos.html">Teclados</a></li>
             </ul>
           </li>
           <li>
@@ -76,40 +76,31 @@
 
 <article class="container-fluid pt-5" id="article-container"> 
     <div class="row m-auto gap-1">
-      <div class="card p-5 col-md-3 col-xs-12 m-auto">
-        <div class="card-hover">
+      <div class="card p-5 col-md-3 col-xs-12 m-auto card-hover">
           <img src="images/images 10.jpg" class="card-img-top w-100" alt="article-img-1">
-
-          <div class="card-body">
+        <div class="card-body">
             <h1 class="card-title fs-5">Mejora tu set-up</h1>
             <p class="card-text placeholder-wave">Lleva al máximo tu experiencia de juego.</p>
             <a href="pages/productos.html" class="btn btn-dark">Más información</a>
-          </div>
         </div>
       </div>
 
-      <div class="card p-5 col-md-3 col-xs-12 offset-1 m-auto">
-        <div class="card-hover">
+      <div class="card p-5 col-md-3 col-xs-12 offset-1 m-auto card-hover">
           <img src="images/images 11.jpg" class="card-img-top w-100" alt="article-img-3">
-
-          <div class="card-body">
+        <div class="card-body">
             <h2 class="card-title fs-5">Prueba la nueva tecnología </h2>
             <p class="card-text placeholder-wave">Descubre nuevos mundos.</p>
             <a href="pages/productos.html" class="btn btn-dark">Más información</a>
-          </div>
         </div>
       </div>
 
-      <div class="card p-5 col-md-3 col-xs-12 offset-1 m-auto">
-        <div class="card-hover">
+    <div class="card p-5 col-md-3 col-xs-12 offset-1 m-auto card-hover">
           <img src="images/images 12.jpg" class="card-img-top w-100" alt="article-img-3">
-
         <div class="card-body">
           <h3 class="card-title fs-5">Comodidad a la hora de trabajar</h3>
           <p class="card-text placeholder-wave">Haz de estos productos tu zona de comfort.</p>
           <a href="pages/productos.html" class="btn btn-dark">Más información</a>
         </div>
-     </div>
     </div>
   </div>
 </article>
