--- a/pages/donde-encontrarnos.html
+++ b/pages/donde-encontrarnos.html
@@ -27,9 +27,9 @@
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item text-dark" href="auriculares.html">Auriculares</a></li>
+                    <li><a class="dropdown-item text-dark" href="productos.html">Auriculares</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item text-dark" href="teclados.html">Teclados</a></li>
+                    <li><a class="dropdown-item text-dark" href="productos.html">Teclados</a></li>
                 </ul>
               </li>
               <li>
