Finalice funcionalidades de pagina Productos y comence con pagina Contacto.

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -52,6 +52,23 @@
 
         
 <article>
+
+
+  <div class="mb-3">
+    <label for="exampleFormControlInput1" class="form-label">Email address</label>
+    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+  </div>
+  <div class="mb-3">
+    <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+  </div>
+  <div><button type="submit" class="btn btn-primary mb-3">Confirm identity</button></div>
+
+
+
+
+
+
     <form action="" enctype="application/x-www-form-urlencoded" method="post">
         <label for="nombre">Nombre</label>
         <br>
