--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-          <button class="btn btn-dark btn-dark-outline-success" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-          </svg></button>
+          <button class="btn btn-dark btn-dark-outline-success" type="submit"><i class="bi bi-search"></i></button>
+          <button class="btn btn-dark btn-dark-outline-success" type="input"> <i class="bi bi-cart"></i></button>
         </form>
       </div>
     </div>
@@ -87,7 +86,7 @@
 
       <div class="card p-5 col-md-3 col-xs-12 offset-1 m-auto card-hover">
           <img src="images/images 11.jpg" class="card-img-top w-100" alt="article-img-3">
-        <div class="card-body">
+        <div class="card-body-teclados">
             <h2 class="card-title fs-5">Prueba la nueva tecnología </h2>
             <p class="card-text placeholder-wave">Descubre nuevos mundos.</p>
             <a href="pages/productos.html" class="btn btn-dark">Más información</a>
