Mejora diseño paginas index y Productos, pagina terminada Contactos
git status

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 </aside>
 
 <article class="container-fluid pt-5" id="article-container"> 
-    <div class="row m-auto gap-1">
-      <div class="card p-5 col-md-3 col-xs-12 m-auto card-hover">
+    <div class="row m-auto gap-4">
+      <div class="card p-5 col-md-3 col-sm-8 m-auto card-hover">
           <img src="images/images 10.jpg" class="card-img-top w-100" alt="article-img-1">
         <div class="card-body">
             <h1 class="card-title fs-5">Mejora tu set-up</h1>
@@ -84,7 +84,7 @@
         </div>
       </div>
 
-      <div class="card p-5 col-md-3 col-xs-12 offset-1 m-auto card-hover">
+      <div class="card p-5 col-md-3 col-sm-8 offset-1 m-auto card-hover">
           <img src="images/images 11.jpg" class="card-img-top w-100" alt="article-img-3">
         <div class="card-body-teclados">
             <h2 class="card-title fs-5">Prueba la nueva tecnología </h2>
@@ -93,7 +93,7 @@
         </div>
       </div>
 
-    <div class="card p-5 col-md-3 col-xs-12 offset-1 m-auto card-hover">
+    <div class="card p-5 col-md-3 col-sm-8 offset-1 m-auto card-hover">
           <img src="images/images 12.jpg" class="card-img-top w-100" alt="article-img-3">
         <div class="card-body">
           <h3 class="card-title fs-5">Comodidad a la hora de trabajar</h3>
