Ultimando detalles de diseño y terminando pagina -donde encontrarnos-

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -39,9 +39,8 @@
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-              <button class="btn btn-dark btn-dark-outline-success" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-              </svg></button>
+              <button class="btn btn-dark btn-dark-outline-success" type="submit"><i class="bi bi-search"></i></button>
+              <button class="btn btn-dark btn-dark-outline-success" type="input"> <i class="bi bi-cart"></i></button>
             </form>
           </div>
         </div>
@@ -57,7 +56,7 @@
                   <img src="../images/auriculares 1.png" class="card-img-top" alt="auriculares">
               </div>
               <div class="card-body card-body-products">
-                <h5 class="card-title card-title-products">Auriculares</h5>
+                <h5 class="card-title card-title-products">Modelo G-435</h5>
                 <p class="card-text card-text-products">Auriculares.</p>
                 <a href="#auriculares" class="btn btn-dark">Ver más</a>
               </div>
@@ -67,7 +66,7 @@
                 <img src="../images/auriculares 3.png " class="card-img-top" alt="auriculares">
               </div>
               <div class="card-body card-body-products">
-                <h5 class="card-title card-title-products">Auriculares</h5>
+                <h5 class="card-title card-title-products">Modelo G-335 Pro</h5>
                 <p class="card-text card-text-products">Auriculares.</p>
                 <a href="#auriculares" class="btn btn-dark">Ver más</a>
               </div>
@@ -78,7 +77,7 @@
               </div>
                
               <div class="card-body card-body-products">
-                <h5 class="card-title card-title-products">Auriculares</h5>
+                <h5 class="card-title card-title-products">Modelo G-332</h5>
                 <p class="card-text card-text-products">Auriculares.</p>
                 <a href="#auriculares" class="btn btn-dark">Ver más</a>
               </div>
@@ -94,7 +93,7 @@
             </div>
               
               <div class="card-body card-body-products">
-                <h5 class="card-title card-title-products">Auriculares</h5>
+                <h5 class="card-title card-title-products">Modelo G-733</h5>
                 <p class="card-text card-text-products">Auriculares.</p>
                 <a href="#auriculares" class="btn btn-dark">Ver más</a>
               </div>
@@ -104,8 +103,8 @@
               <img src="../images/teclado 1.png" class="card-img-top" alt="teclados">
             </div>
               <div class="card-body card-body-products">
-                <h5 class="card-title card-title-products">Teclado</h5>
-                <p class="card-text card-text-products">Teclado.</p>
+                <h5 class="card-title card-title-products">Signature K-650</h5>
+                <p class="card-text card-text-products">Teclados.</p>
                 <a href="#teclados" class="btn btn-dark">Ver más</a>
               </div>
             </div>
@@ -114,8 +113,8 @@
               <img src="../images/teclado 2.png" class="card-img-top" alt="teclados">
             </div>
               <div class="card-body card-body-products">
-                <h5 class="card-title card-title-products">Teclado</h5>
-                <p class="card-text card-text-products">Teclado.</p>
+                <h5 class="card-title card-title-products">MX Mechanical</h5>
+                <p class="card-text card-text-products">Teclados.</p>
                 <a href="#teclados" class="btn btn-dark">Ver más</a>
               </div>
             </div>
@@ -128,8 +127,8 @@
               <img src="../images/teclado 5.png" class="card-img-top" alt="teclados">
             </div>
               <div class="card-body card-body-products">
-                <h5 class="card-title card-title-products">Teclado</h5>
-                <p class="card-text card-text-products">Teclado.</p>
+                <h5 class="card-title card-title-products">K-600</h5>
+                <p class="card-text card-text-products">Teclados.</p>
                 <a href="#teclados" class="btn btn-dark">Ver más</a>
               </div>
             </div>
@@ -138,8 +137,8 @@
               <img src="../images/teclado 4.png" class="card-img-top" alt="teclados">
             </div>
               <div class="card-body card-body-products">
-                <h5 class="card-title card-title-products">Teclado</h5>
-                <p class="card-text card-text-products">Teclado.</p>
+                <h5 class="card-title card-title-products">Teclado K-835</h5>
+                <p class="card-text card-text-products">Teclados.</p>
                 <a href="#teclados" class="btn btn-dark">Ver más</a>
               </div>
             </div>
@@ -148,8 +147,8 @@
               <img src="../images/teclado 3.png" class="card-img-top" alt="teclados">
             </div>
               <div class="card-body card-body-products">
-                <h5 class="card-title card-title-products">Teclado</h5>
-                <p class="card-text card-text-products">Teclado.</p>
+                <h5 class="card-title card-title-products">ERGO K-860</h5>
+                <p class="card-text card-text-products">Teclados.</p>
                 <a href="#teclados" class="btn btn-dark">Ver más</a>
               </div>
             </div>
@@ -173,8 +172,8 @@
         <div class="card p-5 col-md-2 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-red">
             <img src="../images/auriculares 1.png" class="card-img-top w-100" alt="article-img-1">
           <div class="card-body card-body-auriculares">
-              <h1 class="card-title fs-5">Mejora tu set-up</h1>
-              <p class="card-text placeholder-wave">Lleva al máximo tu experiencia de juego.</p>
+              <h1 class="card-title fs-5"> Modelo G-435</h1>
+              <p class="card-text placeholder-wave fw-bold">49,99$</p>
               <a href="#" class="btn btn-dark btn-size-auriculares">Agregar al Carrito</a>
           </div>
         </div>
@@ -182,8 +181,8 @@
         <div class="card p-5 col-md-2 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-grey">
           <img src="../images/auriculares 2.png" class="card-img-top " id="second-img-auriculares" alt="article-img-2">
         <div class="card-body card-body-auriculares">
-            <h1 class="card-title fs-5">Mejora tu set-up</h1>
-            <p class="card-text placeholder-wave">Lleva al máximo tu experiencia de juego.</p>
+            <h1 class="card-title fs-5"> Modelo G-733</h1>
+            <p class="card-text placeholder-wave fw-bold">67,00$</p>
             <a href="#" class="btn btn-dark btn-size-auriculares">Agregar al Carrito</a>
         </div>
       </div>
@@ -191,8 +190,8 @@
       <div class="card p-5 col-md-2 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-red">
         <img src="../images/auriculares 3.png" class="card-img-top w-100" alt="article-img-3">
       <div class="card-body card-body-auriculares">
-          <h1 class="card-title fs-5">Mejora tu set-up</h1>
-          <p class="card-text placeholder-wave">Lleva al máximo tu experiencia de juego.</p>
+          <h1 class="card-title fs-5"> Modelo G-335 Pro</h1>
+          <p class="card-text placeholder-wave fw-bold">50,00$</p>
           <a href="#" class="btn btn-dark btn-size-auriculares">Agregar al Carrito</a>
       </div>
     </div>
@@ -200,8 +199,8 @@
     <div class="card p-5 col-md-2 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-grey">
       <img src="../images/auriculares 4.png" class="card-img-top w-100" alt="article-img-4">
     <div class="card-body card-body-auriculares">
-        <h1 class="card-title fs-5">Mejora tu set-up</h1>
-        <p class="card-text placeholder-wave">Lleva al máximo tu experiencia de juego.</p>
+        <h1 class="card-title fs-5">Modelo G-332</h1>
+        <p class="card-text placeholder-wave fw-bold">25,99$</p>
         <a href="#" class="btn btn-dark btn-size-auriculares">Agregar al Carrito</a>
     </div>
   </div>
@@ -214,8 +213,8 @@
         <div class="card p-5 col-md-2 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-grey">
             <img src="../images/teclado 1.png" class="card-img-top w-100" alt="article-2-img-1">
           <div class="card-body card-body-auriculares">
-              <h1 class="card-title fs-5">Mejora tu set-up</h1>
-              <p class="card-text placeholder-wave">Lleva al máximo tu experiencia de juego.</p>
+              <h1 class="card-title fs-5">Signature K-650</h1>
+              <p class="card-text placeholder-wave fw-bold">80,00$</p>
               <a href="#" class="btn btn-dark btn-size-auriculares">Agregar al Carrito</a>
           </div>
         </div>
@@ -223,8 +222,8 @@
         <div class="card p-5 col-md-2 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-red">
           <img src="../images/teclado 2.png" class="card-img-top " alt="article-2-img-2">
         <div class="card-body card-body-auriculares">
-            <h1 class="card-title fs-5">Mejora tu set-up</h1>
-            <p class="card-text placeholder-wave">Lleva al máximo tu experiencia de juego.</p>
+            <h1 class="card-title fs-5">MX Mechanical</h1>
+            <p class="card-text placeholder-wave fw-bold">85,99$</p>
             <a href="#" class="btn btn-dark btn-size-auriculares">Agregar al Carrito</a>
         </div>
       </div>
@@ -232,8 +231,8 @@
       <div class="card p-5 col-md-2 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-grey">
         <img src="../images/teclado 3.png" class="card-img-top w-100" alt="article-2-img-3">
       <div class="card-body card-body-auriculares">
-          <h1 class="card-title fs-5">Mejora tu set-up</h1>
-          <p class="card-text placeholder-wave">Lleva al máximo tu experiencia de juego.</p>
+          <h1 class="card-title fs-5">ERGO K-860</h1>
+          <p class="card-text placeholder-wave fw-bold">99,99$</p>
           <a href="#" class="btn btn-dark btn-size-auriculares">Agregar al Carrito</a>
       </div>
     </div>
@@ -241,8 +240,8 @@
     <div class="card p-5 col-md-2 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-red">
       <img src="../images/teclado 4.png" class="card-img-top w-100" alt="article-2-img-4">
     <div class="card-body card-body-auriculares">
-        <h1 class="card-title fs-5">Mejora tu set-up</h1>
-        <p class="card-text placeholder-wave">Lleva al máximo tu experiencia de juego.</p>
+        <h1 class="card-title fs-5">Teclado K-835</h1>
+        <p class="card-text placeholder-wave fw-bold ">82,00$</p>
         <a href="#" class="btn btn-dark btn-size-auriculares">Agregar al Carrito</a>
     </div>
 
