--- a/pages/donde-encontrarnos.html
+++ b/pages/donde-encontrarnos.html
@@ -41,18 +41,16 @@
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-              <button class="btn btn-dark btn-dark-outline-success" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-              </svg></button>
+              <button class="btn btn-dark btn-dark-outline-success" type="submit"><i class="bi bi-search"></i></button>
+              <button class="btn btn-dark btn-dark-outline-success" type="input"> <i class="bi bi-cart"></i></button>
             </form>
           </div>
         </div>
       </nav>
     
  
-
-<article>
-    <h1>Puede encontrarnos como 3D SOUNDS</h1>
+      <h1>Debajo en el mapa esta marcado nuestro punto de encuentro!</h1>
+<article class="iframe-flex">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26268.934230221097!2d-58.421108722686775!3d-34.61385078396895!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccbf7f1294b09%3A0x7679a1945d2f6f1!2s31store!5e0!3m2!1ses!2sar!4v1683593604952!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  
 </article>
     
