Arreglo en funcionalidades responsive

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 <article class="container-fluid pt-5" id="article-container"> 
     <div class="row m-auto gap-4">
-      <div class="card p-5 col-md-3 col-sm-8 m-auto card-hover">
+      <div class="card p-5 col-lg-3 col-md-3 col-sm-8 m-auto card-hover">
           <img src="images/images 10.jpg" class="card-img-top w-100" alt="article-img-1">
         <div class="card-body">
             <h1 class="card-title fs-5">Mejora tu set-up</h1>
@@ -84,20 +84,20 @@
         </div>
       </div>
 
-      <div class="card p-5 col-md-3 col-sm-8 offset-1 m-auto card-hover">
+      <div class="card p-5 col-lg-3 col-md-3 col-sm-8 m-auto card-hover">
           <img src="images/images 11.jpg" class="card-img-top w-100" alt="article-img-3">
-        <div class="card-body-teclados">
+        <div class="card-body">
             <h2 class="card-title fs-5">Prueba la nueva tecnología </h2>
             <p class="card-text placeholder-wave">Descubre nuevos mundos.</p>
             <a href="pages/productos.html" class="btn btn-dark">Más información</a>
         </div>
       </div>
 
-    <div class="card p-5 col-md-3 col-sm-8 offset-1 m-auto card-hover">
+    <div class="card p-5 col-lg-3 col-md-3 col-sm-8 m-auto card-hover">
           <img src="images/images 12.jpg" class="card-img-top w-100" alt="article-img-3">
         <div class="card-body">
           <h3 class="card-title fs-5">Comodidad a la hora de trabajar</h3>
-          <p class="card-text placeholder-wave">Haz de estos productos tu zona de comfort.</p>
+          <p class="card-text placeholder-wave">Tu nueva zona de comfort.</p>
           <a href="pages/productos.html" class="btn btn-dark">Más información</a>
         </div>
     </div>
