--- a/pages/productos.html
+++ b/pages/productos.html
@@ -168,8 +168,8 @@
     <h2 id="auriculares">Auriculares</h2>
 
     <article class="container-fluid pt-5 mt-5 pb-5"> 
-      <div class="row m-auto gap-4">
-        <div class="card p-5 col-md-2 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-red">
+      <div class="row m-auto gap-4 container-grid-lg-auris">
+        <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-red grid-lg-5">
             <img src="../images/auriculares 1.png" class="card-img-top w-100" alt="article-img-1">
           <div class="card-body card-body-auriculares">
               <h1 class="card-title fs-5"> Modelo G-435</h1>
@@ -178,8 +178,8 @@
           </div>
         </div>
   
-        <div class="card p-5 col-md-2 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-grey">
-          <img src="../images/auriculares 2.png" class="card-img-top " id="second-img-auriculares" alt="article-img-2">
+        <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-grey grid-lg-6">
+          <img src="../images/auriculares 2.png" class="card-img-top w-100 " id="second-img-auriculares" alt="article-img-2">
         <div class="card-body card-body-auriculares">
             <h1 class="card-title fs-5"> Modelo G-733</h1>
             <p class="card-text placeholder-wave fw-bold">67,00$</p>
@@ -187,7 +187,7 @@
         </div>
       </div>
   
-      <div class="card p-5 col-md-2 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-red">
+      <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-red grid-lg-7">
         <img src="../images/auriculares 3.png" class="card-img-top w-100" alt="article-img-3">
       <div class="card-body card-body-auriculares">
           <h1 class="card-title fs-5"> Modelo G-335 Pro</h1>
@@ -196,7 +196,7 @@
       </div>
     </div>
 
-    <div class="card p-5 col-md-2 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-grey">
+    <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-grey grid-lg-8">
       <img src="../images/auriculares 4.png" class="card-img-top w-100" alt="article-img-4">
     <div class="card-body card-body-auriculares">
         <h1 class="card-title fs-5">Modelo G-332</h1>
@@ -209,8 +209,8 @@
 
     <h3 id="teclados">Teclados</h3>
   <article class="container-fluid pt-5  mt-5 pb-5"> 
-      <div class="row m-auto gap-4 ">
-        <div class="card p-5 col-md-2 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-grey">
+      <div class="row m-auto gap-4 container-grid-lg">
+        <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-grey grid-lg-1">
             <img src="../images/teclado 1.png" class="card-img-top w-100" alt="article-2-img-1">
           <div class="card-body card-body-auriculares">
               <h1 class="card-title fs-5">Signature K-650</h1>
@@ -219,8 +219,8 @@
           </div>
         </div>
   
-        <div class="card p-5 col-md-2 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-red">
-          <img src="../images/teclado 2.png" class="card-img-top " alt="article-2-img-2">
+        <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-red grid-lg-2">
+          <img src="../images/teclado 2.png" class="card-img-top w-100 " alt="article-2-img-2">
         <div class="card-body card-body-auriculares">
             <h1 class="card-title fs-5">MX Mechanical</h1>
             <p class="card-text placeholder-wave fw-bold">85,99$</p>
@@ -228,7 +228,7 @@
         </div>
       </div>
   
-      <div class="card p-5 col-md-2 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-grey">
+      <div class="card p-5 col-lg-2 col-md-6  col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-grey grid-lg-3">
         <img src="../images/teclado 3.png" class="card-img-top w-100" alt="article-2-img-3">
       <div class="card-body card-body-auriculares">
           <h1 class="card-title fs-5">ERGO K-860</h1>
@@ -237,7 +237,7 @@
       </div>
     </div>
 
-    <div class="card p-5 col-md-2 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-red">
+    <div class="card p-5 col-lg-2 col-md-6  col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-red grid-lg-4">
       <img src="../images/teclado 4.png" class="card-img-top w-100" alt="article-2-img-4">
     <div class="card-body card-body-auriculares">
         <h1 class="card-title fs-5">Teclado K-835</h1>
