Generando sass en nuestro trabajo, comienzo de transformar cosas de css a scss

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>3D SOUND</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-underline p-3">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-underline p-3 sticky-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#"><img id="nav-img" class="rounded-circle" src="images/favicon.png" alt="favicon">
       </a>
@@ -110,10 +110,10 @@
       <div class="footer-text pb-3">            
         <h5>Seguinos en nuestras redes!</h5>
       </div>
-      <div class=" m-auto col-xs-12">
-        <a href="https://www.instagram.com/" class="btn btn-dark btn-sm" role="button" data-bs-toggle="button"><i class="bi bi-instagram"></i></a>
-        <a href="https://es-la.facebook.com/" class="btn btn-dark btn-sm" role="button" data-bs-toggle="button"><i class="bi bi-facebook"></i></a>
-        <a href="https://twitter.com/?lang=es" class="btn btn-dark btn-sm" role="button" data-bs-toggle="button"><i class="bi bi-twitter"></i></a>
+      <div class="m-auto col-xs-12">
+        <a href="https://www.instagram.com/" class="btn btn-dark "><i class="bi bi-instagram"></i></a>
+        <a href="https://es-la.facebook.com/" class="btn btn-dark "><i class="bi bi-facebook"></i></a>
+        <a href="https://twitter.com/?lang=es" class="btn btn-dark "><i class="bi bi-twitter"></i></a>
       </div>
     </div>
   </div>
