--- a/pages/donde-encontrarnos.html
+++ b/pages/donde-encontrarnos.html
@@ -50,11 +50,11 @@
     
  
       <h1>Debajo en el mapa esta marcado nuestro punto de encuentro!</h1>
-<article class="iframe-flex">
+<article class="iframe-flex container-fluid">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26268.934230221097!2d-58.421108722686775!3d-34.61385078396895!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccbf7f1294b09%3A0x7679a1945d2f6f1!2s31store!5e0!3m2!1ses!2sar!4v1683593604952!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  
 </article>
     
-<footer class="bg-dark pt-5 pb-4 mt-5">
+<footer class="bg-dark pt-5 pb-4 mt-5 fixed-bottom">
   <div class="container-fluid text-center">
     <div class="row text-center">
       <div class="footer-text pb-3">            
