Cambio sintaxis en sass, nuevos colores, y cambio de diseño en index y productos.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="Da el máximo de vos con el mejor equipo para juegos, trabajo, u ocio que pueda existir, aquí en 3D SOUND vas a encontrar desde nuestra especialidad en auriculares y sonido hasta teclados de la mejor calidad existente en el mercado de periféricos, todos estos a un precio accesible, ya que, en 3D SOUNDS tenemos los precios más bajos del mercado, contamos con un contacto especializado para resolver dudas y consultas de nuestros clientes que confíen en nosotros y en nuestra calidad tanto de productos, como nuestra calidad humana. También comentar que estan habilitados todos los medios de pago, podes abonar por transferecia, tarjeta de débito o crédito, o podes en efectivo acercandote al local ubicado en el barrio de Caballito, Ciudad Autónoma de Buenos Aires, entre las calles Jeronimo Salguero y Av.Medrano y así también podremos brindar una atención especializada para poder conseguir lo que usted necesita.">
     <meta name="keywords" content="Audio, Auriculares, Teclados, Tecnología, Set-up, Gaming, Periféricos, Venta, Componentes">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -75,33 +75,38 @@
 </aside>
 
 <article class="container-fluid pt-5" id="article-container"> 
-    <div class="row m-auto gap-4">
-      <div class="card p-5 col-lg-3 col-md-3 col-sm-8 m-auto card-hover">
+    <div class="row m-auto gap-4 container-fluid">
+      <h1 class="card-title fs-5 col-lg-4">Mejora tu set-up</h1>
+      <div class="card p-5 col-lg-8 col-md-3 col-sm-8 m-auto card-hover w-25 ">
           <img src="images/images 10.jpg" class="card-img-top w-100" alt="article-img-1">
         <div class="card-body">
-            <h1 class="card-title fs-5">Mejora tu set-up</h1>
-            <p class="card-text placeholder-wave">Lleva al máximo tu experiencia de juego.</p>
+          <p class="card-text placeholder-wave">Lleva al máximo tu experiencia de juego.</p>
             <a href="pages/productos.html" class="btn btn-dark">Más información</a>
         </div>
       </div>
 
-      <div class="card p-5 col-lg-3 col-md-3 col-sm-8 m-auto card-hover">
+      <div class="container-fluid pt-5 row m-auto">
+      <div class="card p-5 col-lg-8 col-md-3 col-sm-8 m-auto card-hover w-25">
           <img src="images/images 11.jpg" class="card-img-top w-100" alt="article-img-2">
         <div class="card-body">
-            <h2 class="card-title fs-5">Prueba la nueva tecnología </h2>
             <p class="card-text placeholder-wave">Descubre nuevos mundos.</p>
             <a href="pages/productos.html" class="btn btn-dark">Más información</a>
         </div>
       </div>
+      <h2 class="card-title fs-5 col-lg-4 position-relative">Prueba la nueva tecnología </h2>
+    </div>
 
-    <div class="card p-5 col-lg-3 col-md-3 col-sm-8 m-auto card-hover">
+    <div class="container-fluid pt-5 row m-auto">
+      <h3 class="card-title fs-5 col-lg-4">Comodidad a la hora de trabajar</h3>
+    <div class="card p-5 col-lg-8 col-md-3 col-sm-8 m-auto card-hover w-25">
           <img src="images/images 12.jpg" class="card-img-top w-100" alt="article-img-3">
         <div class="card-body">
-          <h3 class="card-title fs-5">Comodidad a la hora de trabajar</h3>
+          
           <p class="card-text placeholder-wave">Tu nueva zona de comfort.</p>
           <a href="pages/productos.html" class="btn btn-dark">Más información</a>
         </div>
     </div>
+  </div>
   </div>
 </article>
 </main>
