--- a/pages/donde-encontrarnos.html
+++ b/pages/donde-encontrarnos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="Da el máximo de vos con el mejor equipo para juegos, trabajo, u ocio que pueda existir, aquí en 3D SOUND vas a encontrar desde nuestra especialidad en auriculares y sonido hasta teclados de la mejor calidad existente en el mercado de periféricos, todos estos a un precio accesible, ya que, en 3D SOUNDS tenemos los precios más bajos del mercado, contamos con un contacto especializado para resolver dudas y consultas de nuestros clientes que confíen en nosotros y en nuestra calidad tanto de productos, como nuestra calidad humana. También comentar que estan habilitados todos los medios de pago, podes abonar por transferecia, tarjeta de débito o crédito, o podes en efectivo acercandote al local ubicado en el barrio de Caballito, Ciudad Autónoma de Buenos Aires, entre las calles Jeronimo Salguero y Av.Medrano y así también podremos brindar una atención especializada para poder conseguir lo que usted necesita.">
     <meta name="keywords" content="">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -17,7 +17,7 @@
 
 <body>
 
-    <nav  class="navbar navbar-expand-lg navbar-dark bg-dark nav-underline p-3">
+    <nav  class="navbar navbar-expand-lg navbar-dark bg-dark nav-underline p-3 sticky-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html"><img id="nav-img" class="rounded-circle" src="../images/favicon.png" alt="favicon">
           </a>
@@ -62,10 +62,10 @@
       <div class="footer-text pb-3">            
         <h5>Seguinos en nuestras redes!</h5>
       </div>
-      <div class=" m-auto col-xs-12">
-        <a href="https://www.instagram.com/" class="btn btn-dark btn-sm" role="button" data-bs-toggle="button"><i class="bi bi-instagram"></i></a>
-        <a href="https://es-la.facebook.com/" class="btn btn-dark btn-sm" role="button" data-bs-toggle="button"><i class="bi bi-facebook"></i></a>
-        <a href="https://twitter.com/?lang=es" class="btn btn-dark btn-sm" role="button" data-bs-toggle="button"><i class="bi bi-twitter"></i></a>
+      <div class="m-auto col-xs-12">
+        <a href="https://www.instagram.com/" class="btn btn-dark "><i class="bi bi-instagram"></i></a>
+        <a href="https://es-la.facebook.com/" class="btn btn-dark "><i class="bi bi-facebook"></i></a>
+        <a href="https://twitter.com/?lang=es" class="btn btn-dark "><i class="bi bi-twitter"></i></a>
       </div>
     </div>
   </div>
