--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Da el máximo de vos con el mejor equipo para juegos, trabajo, u ocio que pueda existir, aquí en 3D SOUND vas a encontrar desde nuestra especialidad en auriculares y sonido hasta teclados de la mejor calidad existente en el mercado de periféricos, todos estos a un precio accesible, ya que, en 3D SOUNDS tenemos los precios más bajos del mercado, contamos con un contacto especializado para resolver dudas y consultas de nuestros clientes que confíen en nosotros y en nuestra calidad tanto de productos, como nuestra calidad humana. También comentar que estan habilitados todos los medios de pago, podes abonar por transferecia, tarjeta de débito o crédito, o podes en efectivo acercandote al local ubicado en el barrio de Caballito, Ciudad Autónoma de Buenos Aires, entre las calles Jeronimo Salguero y Av.Medrano y así también podremos brindar una atención especializada para poder conseguir lo que usted necesita.">
+    <meta name="keywords" content="Audio, Auriculares, Teclados, Tecnología, Set-up, Gaming, Periféricos, Venta, Componentes">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
@@ -15,7 +15,7 @@
     <title>Productos</title>
 </head>
 <body>
-    <nav  class="navbar navbar-expand-lg navbar-dark bg-dark nav-underline p-3">
+    <nav  class="navbar navbar-expand-lg navbar-dark bg-dark nav-underline p-3 sticky-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html"><img id="nav-img" class="rounded-circle" src="../images/favicon.png" alt="favicon">
           </a>
@@ -171,7 +171,7 @@
 
     <article class="container-fluid pt-5 mt-5 pb-5"> 
       <div class="row m-auto gap-4 container-grid-lg-auris">
-        <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-red grid-lg-5">
+        <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-grey grid-lg-5">
             <img src="../images/auriculares 1.png" class="card-img-top w-100" alt="article-img-1">
           <div class="card-body card-body-auriculares">
               <h1 class="card-title fs-5"> Modelo G-435</h1>
@@ -189,7 +189,7 @@
         </div>
       </div>
   
-      <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-red grid-lg-7">
+      <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-grey grid-lg-7">
         <img src="../images/auriculares 3.png" class="card-img-top w-100" alt="article-img-3">
       <div class="card-body card-body-auriculares">
           <h1 class="card-title fs-5"> Modelo G-335 Pro</h1>
@@ -212,7 +212,7 @@
     <h3 id="teclados">Teclados</h3>
   <article class="container-fluid pt-5  mt-5 pb-5"> 
       <div class="row m-auto gap-4 container-grid-lg">
-        <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-grey grid-lg-1">
+        <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-red grid-lg-1">
             <img src="../images/teclado 1.png" class="card-img-top w-100" alt="article-2-img-1">
           <div class="card-body card-body-auriculares">
               <h1 class="card-title fs-5">Signature K-650</h1>
@@ -230,7 +230,7 @@
         </div>
       </div>
   
-      <div class="card p-5 col-lg-2 col-md-6  col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-grey grid-lg-3">
+      <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-red grid-lg-3">
         <img src="../images/teclado 3.png" class="card-img-top w-100" alt="article-2-img-3">
       <div class="card-body card-body-auriculares">
           <h1 class="card-title fs-5">ERGO K-860</h1>
@@ -255,20 +255,20 @@
   </article>
 
 
-    <footer class="bg-dark pt-5 pb-4 mt-5">
-      <div class="container-fluid text-center">
-        <div class="row text-center">
-          <div class="footer-text pb-3">            
-            <h5>Seguinos en nuestras redes!</h5>
-          </div>
-          <div class=" m-auto col-xs-12">
-            <a href="https://www.instagram.com/" class="btn btn-dark btn-sm" role="button" data-bs-toggle="button"><i class="bi bi-instagram"></i></a>
-            <a href="https://es-la.facebook.com/" class="btn btn-dark btn-sm" role="button" data-bs-toggle="button"><i class="bi bi-facebook"></i></a>
-            <a href="https://twitter.com/?lang=es" class="btn btn-dark btn-sm" role="button" data-bs-toggle="button"><i class="bi bi-twitter"></i></a>
-          </div>
-        </div>
+<footer class="bg-dark pt-5 pb-4 mt-5">
+  <div class="container-fluid text-center">
+    <div class="row text-center">
+      <div class="footer-text pb-3">            
+        <h5>Seguinos en nuestras redes!</h5>
       </div>
-    </footer>
+      <div class="m-auto col-xs-12">
+        <a href="https://www.instagram.com/" class="btn btn-dark "><i class="bi bi-instagram"></i></a>
+        <a href="https://es-la.facebook.com/" class="btn btn-dark "><i class="bi bi-facebook"></i></a>
+        <a href="https://twitter.com/?lang=es" class="btn btn-dark "><i class="bi bi-twitter"></i></a>
+      </div>
+    </div>
+  </div>
+</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
