--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/main.css">
     <title>3D SOUND</title>
@@ -75,35 +76,40 @@
 </aside>
 
 <article class="container-fluid pt-5" id="article-container"> 
-    <div class="row m-auto gap-4 container-fluid">
-      <h1 class="card-title fs-5 col-lg-4">Mejora tu set-up</h1>
-      <div class="card p-5 col-lg-8 col-md-3 col-sm-8 m-auto card-hover w-25 ">
+    <div class="row m-auto container-fluid">
+      <div class="col-lg-4 card-aside" data-aos="zoom-in" data-aos-delay="200">
+        <h1 class="fs-5">Mejora tu set-up</h1>
+        <p class="placeholder-wave">Lleva al máximo tu experiencia de juego.</p>
+      </div>
+      <div class="card p-5 col-lg-8 col-md-3 col-sm-8 m-auto card-hover w-25 card-flex-end" data-aos="fade-left" data-aos-delay="200">
           <img src="images/images 10.jpg" class="card-img-top w-100" alt="article-img-1">
         <div class="card-body">
-          <p class="card-text placeholder-wave">Lleva al máximo tu experiencia de juego.</p>
-            <a href="pages/productos.html" class="btn btn-dark">Más información</a>
+            <a href="pages/productos.html" class="btn btn-dark btn-home-card">Más información</a>
         </div>
-      </div>
-
-      <div class="container-fluid pt-5 row m-auto">
-      <div class="card p-5 col-lg-8 col-md-3 col-sm-8 m-auto card-hover w-25">
-          <img src="images/images 11.jpg" class="card-img-top w-100" alt="article-img-2">
-        <div class="card-body">
-            <p class="card-text placeholder-wave">Descubre nuevos mundos.</p>
-            <a href="pages/productos.html" class="btn btn-dark">Más información</a>
-        </div>
-      </div>
-      <h2 class="card-title fs-5 col-lg-4 position-relative">Prueba la nueva tecnología </h2>
     </div>
 
     <div class="container-fluid pt-5 row m-auto">
-      <h3 class="card-title fs-5 col-lg-4">Comodidad a la hora de trabajar</h3>
-    <div class="card p-5 col-lg-8 col-md-3 col-sm-8 m-auto card-hover w-25">
+      <div class="card p-5 col-lg-8 col-md-3 col-sm-8 m-auto card-hover w-25 card-flex-end" data-aos="fade-right" data-aos-delay="200">
+          <img src="images/images 11.jpg" class="card-img-top w-100" alt="article-img-2">
+        <div class="card-body">
+            <a href="pages/productos.html" class="btn btn-dark btn-home-card">Más información</a>
+        </div>
+      </div>
+      <div class="col-lg-4 position-relative card-aside" data-aos="zoom-in" data-aos-delay="200">
+        <h2 class="fs-5 ">Prueba la nueva tecnología </h2>
+        <p class="placeholder-wave">Descubre nuevos mundos.</p>
+      </div>
+    </div>
+
+  <div class="container-fluid pt-5 row m-auto">
+    <div class="col-lg-4 card-aside" data-aos="zoom-in" data-aos-delay="200">
+      <h3 class="fs-5">Comodidad a la hora de trabajar</h3>
+      <p class="placeholder-wave">Tu nueva zona de comfort.</p>
+    </div>
+    <div class="card p-5 col-lg-8 col-md-3 col-sm-8 m-auto card-hover w-25" data-aos="fade-left" data-aos-delay="200">
           <img src="images/images 12.jpg" class="card-img-top w-100" alt="article-img-3">
         <div class="card-body">
-          
-          <p class="card-text placeholder-wave">Tu nueva zona de comfort.</p>
-          <a href="pages/productos.html" class="btn btn-dark">Más información</a>
+          <a href="pages/productos.html" class="btn btn-dark btn-home-card">Más información</a>
         </div>
     </div>
   </div>
@@ -133,5 +139,9 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 </body> 
 </html>
