Terminado diseño de index, agregado de funcionalidades SEO y ajustes responsive

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -48,22 +48,22 @@
         </div>
       </nav>
 
-    <main id="carouselExampleIndicators" class="carousel slide carousel-dark mt-5">
+    <main id="carouselExampleIndicators" class="carousel slide carousel-dark mt-5 .slider">
       
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <div class="card-products">
-            <div class="card card-margin-products" style="width: 100%;">
+      <div class="carousel-inner .slider">
+        <div class="carousel-item active .slider">
+          <div class="card-products .slider">
+            <div class="card card-margin-products .slider" style="width: 100%;">
               <div class="img-card">
                   <img src="../images/auriculares 1.png" class="card-img-top" alt="auriculares">
               </div>
-              <div class="card-body card-body-products">
+              <div class="card-body card-body-products ">
                 <h5 class="card-title card-title-products">Modelo G-435</h5>
                 <p class="card-text card-text-products">Auriculares.</p>
                 <a href="#auriculares" class="btn btn-dark">Ver más</a>
               </div>
             </div>
-            <div class="card card-margin-products" style="width: 100%;">
+            <div class="card card-margin-products .slider" style="width: 100%;">
               <div class="img-card">
                 <img src="../images/auriculares 3.png " class="card-img-top" alt="auriculares">
               </div>
@@ -73,7 +73,7 @@
                 <a href="#auriculares" class="btn btn-dark">Ver más</a>
               </div>
             </div>
-            <div class="card card-margin-products" style="width: 100%;">
+            <div class="card card-margin-products .slider" style="width: 100%;">
               <div class="img-card">
                 <img src="../images/auriculares 4.png" class="card-img-top" alt="auriculares">
               </div>
@@ -86,9 +86,9 @@
             </div>
           </div>
         </div>
-        <div class="carousel-item">
-          <div class="card-products">
-            <div class="card card-margin-products" style="width: 100%;">
+        <div class="carousel-item .slider">
+          <div class="card-products .slider">
+            <div class="card card-margin-products .slider" style="width: 100%;">
 
               <div class="img-card">
               <img src="../images/auriculares 2.png" class="card-img-top" alt="auriculares">
@@ -100,7 +100,7 @@
                 <a href="#auriculares" class="btn btn-dark">Ver más</a>
               </div>
             </div>
-            <div class="card card-margin-products" style="width: 100%;">
+            <div class="card card-margin-products .slider" style="width: 100%;">
               <div class="img-card">
               <img src="../images/teclado 1.png" class="card-img-top" alt="teclados">
             </div>
@@ -110,7 +110,7 @@
                 <a href="#teclados" class="btn btn-dark">Ver más</a>
               </div>
             </div>
-            <div class="card card-margin-products" style="width: 100%;">
+            <div class="card card-margin-products .slider" style="width: 100%;">
               <div class="img-card">
               <img src="../images/teclado 2.png" class="card-img-top" alt="teclados">
             </div>
@@ -122,9 +122,9 @@
             </div>
           </div>
         </div>
-        <div class="carousel-item">
-          <div class="card-products">
-            <div class="card card-margin-products" style="width: 100%;">
+        <div class="carousel-item .slider">
+          <div class="card-products .slider">
+            <div class="card card-margin-products .slider" style="width: 100%;">
               <div class="img-card">
               <img src="../images/teclado 5.png" class="card-img-top" alt="teclados">
             </div>
@@ -134,7 +134,7 @@
                 <a href="#teclados" class="btn btn-dark">Ver más</a>
               </div>
             </div>
-            <div class="card card-margin-products" style="width: 100%;">
+            <div class="card card-margin-products .slider" style="width: 100%;">
               <div class="img-card">
               <img src="../images/teclado 4.png" class="card-img-top" alt="teclados">
             </div>
@@ -144,7 +144,7 @@
                 <a href="#teclados" class="btn btn-dark">Ver más</a>
               </div>
             </div>
-            <div class="card card-margin-products" style="width: 100%;">
+            <div class="card card-margin-products .slider" style="width: 100%;">
               <div class="img-card">
               <img src="../images/teclado 3.png" class="card-img-top" alt="teclados">
             </div>
@@ -171,37 +171,37 @@
 
     <article class="container-fluid pt-5 mt-5 pb-5"> 
       <div class="row m-auto gap-4 container-grid-lg-auris">
-        <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-grey grid-lg-5">
+        <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover bg-grey grid-lg-5 card-product-height">
             <img src="../images/auriculares 1.png" class="card-img-top w-100" alt="article-img-1">
           <div class="card-body card-body-auriculares">
-              <h1 class="card-title fs-5"> Modelo G-435</h1>
+              <h2 class="card-title fs-5"> Modelo G-435</h2>
               <p class="card-text placeholder-wave fw-bold">49,99$</p>
               <a href="#" class="btn btn-dark btn-size-auriculares">Agregar al Carrito</a>
           </div>
         </div>
   
-        <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-grey grid-lg-6">
+        <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover bg-grey grid-lg-6 card-product-height  ">
           <img src="../images/auriculares 2.png" class="card-img-top w-100 " id="second-img-auriculares" alt="article-img-2">
         <div class="card-body card-body-auriculares">
-            <h1 class="card-title fs-5"> Modelo G-733</h1>
+            <h2 class="card-title fs-5"> Modelo G-733</h2>
             <p class="card-text placeholder-wave fw-bold">67,00$</p>
             <a href="#" class="btn btn-dark btn-size-auriculares">Agregar al Carrito</a>
         </div>
       </div>
   
-      <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-grey grid-lg-7">
+      <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover bg-grey grid-lg-7 card-product-height ">
         <img src="../images/auriculares 3.png" class="card-img-top w-100" alt="article-img-3">
       <div class="card-body card-body-auriculares">
-          <h1 class="card-title fs-5"> Modelo G-335 Pro</h1>
+          <h2 class="card-title fs-5"> Modelo G-335 Pro</h2>
           <p class="card-text placeholder-wave fw-bold">50,00$</p>
           <a href="#" class="btn btn-dark btn-size-auriculares">Agregar al Carrito</a>
       </div>
     </div>
 
-    <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-grey grid-lg-8">
+    <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover bg-grey grid-lg-8 card-product-height">
       <img src="../images/auriculares 4.png" class="card-img-top w-100" alt="article-img-4">
     <div class="card-body card-body-auriculares">
-        <h1 class="card-title fs-5">Modelo G-332</h1>
+        <h2 class="card-title fs-5">Modelo G-332</h2>
         <p class="card-text placeholder-wave fw-bold">25,99$</p>
         <a href="#" class="btn btn-dark btn-size-auriculares">Agregar al Carrito</a>
     </div>
@@ -212,7 +212,7 @@
     <h3 id="teclados">Teclados</h3>
   <article class="container-fluid pt-5  mt-5 pb-5"> 
       <div class="row m-auto gap-4 container-grid-lg">
-        <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-red grid-lg-1">
+        <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover bg-red grid-lg-1 card-product-height">
             <img src="../images/teclado 1.png" class="card-img-top w-100" alt="article-2-img-1">
           <div class="card-body card-body-auriculares">
               <h1 class="card-title fs-5">Signature K-650</h1>
@@ -221,28 +221,28 @@
           </div>
         </div>
   
-        <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-red grid-lg-2">
+        <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover bg-red grid-lg-2 card-product-height">
           <img src="../images/teclado 2.png" class="card-img-top w-100 " alt="article-2-img-2">
         <div class="card-body card-body-auriculares">
-            <h1 class="card-title fs-5">MX Mechanical</h1>
+            <h2 class="card-title fs-5">MX Mechanical</h2>
             <p class="card-text placeholder-wave fw-bold">85,99$</p>
             <a href="#" class="btn btn-dark btn-size-auriculares">Agregar al Carrito</a>
         </div>
       </div>
   
-      <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-red grid-lg-3">
+      <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover bg-red grid-lg-3 card-product-height">
         <img src="../images/teclado 3.png" class="card-img-top w-100" alt="article-2-img-3">
       <div class="card-body card-body-auriculares">
-          <h1 class="card-title fs-5">ERGO K-860</h1>
+          <h2 class="card-title fs-5">ERGO K-860</h2>
           <p class="card-text placeholder-wave fw-bold">99,99$</p>
           <a href="#" class="btn btn-dark btn-size-auriculares">Agregar al Carrito</a>
       </div>
     </div>
 
-    <div class="card p-5 col-lg-2 col-md-6  col-sm-8 col-xs-8 m-auto card-hover card-height-auriculares bg-red grid-lg-4">
+    <div class="card p-5 col-lg-2 col-md-6  col-sm-8 col-xs-8 m-auto card-hover bg-red grid-lg-4 card-product-height">
       <img src="../images/teclado 4.png" class="card-img-top w-100" alt="article-2-img-4">
     <div class="card-body card-body-auriculares">
-        <h1 class="card-title fs-5">Teclado K-835</h1>
+        <h2 class="card-title fs-5">Teclado K-835</h2>
         <p class="card-text placeholder-wave fw-bold ">82,00$</p>
         <a href="#" class="btn btn-dark btn-size-auriculares">Agregar al Carrito</a>
     </div>
