--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/main.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    
     <title>3D SOUND</title>
 </head>
 <body>
@@ -24,7 +26,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul  class="navbar-nav m-auto" id="navbar">
+        <ul  class="navbar-nav m-auto nav-text" id="navbar">
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
             <ul class="dropdown-menu">
@@ -77,11 +79,11 @@
 
 <article class="container-fluid pt-5" id="article-container"> 
     <div class="row m-auto container-fluid">
-      <div class="col-lg-4 card-aside" data-aos="zoom-in" data-aos-delay="200">
-        <h1 class="fs-5">Mejora tu set-up</h1>
+      <div class="col-lg-4 card-aside m-auto" data-aos="zoom-in" data-aos-delay="200">
+        <h1>Mejora tu set-up</h1>
         <p class="placeholder-wave">Lleva al máximo tu experiencia de juego.</p>
       </div>
-      <div class="card p-5 col-lg-8 col-md-3 col-sm-8 m-auto card-hover w-25 card-flex-end" data-aos="fade-left" data-aos-delay="200">
+      <div class="card p-5 col-lg-8 col-md-3 col-sm-8 m-auto w-25  card-color-1" data-aos="fade-left" data-aos-delay="200">
           <img src="images/images 10.jpg" class="card-img-top w-100" alt="article-img-1">
         <div class="card-body">
             <a href="pages/productos.html" class="btn btn-dark btn-home-card">Más información</a>
@@ -89,24 +91,24 @@
     </div>
 
     <div class="container-fluid pt-5 row m-auto">
-      <div class="card p-5 col-lg-8 col-md-3 col-sm-8 m-auto card-hover w-25 card-flex-end" data-aos="fade-right" data-aos-delay="200">
+      <div class="card p-5 col-lg-8 col-md-3 col-sm-8 m-auto w-25  card-color-2" data-aos="fade-right" data-aos-delay="200">
           <img src="images/images 11.jpg" class="card-img-top w-100" alt="article-img-2">
         <div class="card-body">
             <a href="pages/productos.html" class="btn btn-dark btn-home-card">Más información</a>
         </div>
       </div>
-      <div class="col-lg-4 position-relative card-aside" data-aos="zoom-in" data-aos-delay="200">
-        <h2 class="fs-5 ">Prueba la nueva tecnología </h2>
+      <div class="col-lg-4 position-relative card-aside m-auto" data-aos="zoom-in" data-aos-delay="200">
+        <h2>Prueba la nueva tecnología </h2>
         <p class="placeholder-wave">Descubre nuevos mundos.</p>
       </div>
     </div>
 
   <div class="container-fluid pt-5 row m-auto">
-    <div class="col-lg-4 card-aside" data-aos="zoom-in" data-aos-delay="200">
-      <h3 class="fs-5">Comodidad a la hora de trabajar</h3>
+    <div class="col-lg-4 card-aside m-auto" data-aos="zoom-in" data-aos-delay="200">
+      <h3>Comodidad a la hora de trabajar</h3>
       <p class="placeholder-wave">Tu nueva zona de comfort.</p>
     </div>
-    <div class="card p-5 col-lg-8 col-md-3 col-sm-8 m-auto card-hover w-25" data-aos="fade-left" data-aos-delay="200">
+    <div class="card p-5 col-lg-8 col-md-3 col-sm-8 w-25 m-auto card-color-3" data-aos="fade-left" data-aos-delay="200">
           <img src="images/images 12.jpg" class="card-img-top w-100" alt="article-img-3">
         <div class="card-body">
           <a href="pages/productos.html" class="btn btn-dark btn-home-card">Más información</a>
