--- a/pages/donde-encontrarnos.html
+++ b/pages/donde-encontrarnos.html
@@ -25,7 +25,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse " id="navbarSupportedContent">
-            <ul  class="navbar-nav mx-auto justify-content-between mb-2 mb-lg-0" id="navbar">
+            <ul  class="navbar-nav mx-auto mb-2 mb-lg-0" id="navbar">
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
                 <ul class="dropdown-menu">
