Ajustes responsive en productos

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       </div>
       <div class="col-lg-4 position-relative card-aside m-auto" data-aos="zoom-in" data-aos-delay="200">
         <h2>Prueba la nueva tecnología </h2>
-        <p class="placeholder-wave">Descubre nuevos mundos.</p>
+        <p class="text-end">Descubre nuevos mundos.</p>
       </div>
     </div>
 
