--- a/pages/productos.html
+++ b/pages/productos.html
@@ -171,37 +171,37 @@
 
     <article class="container-fluid pt-5 mt-5 pb-5"> 
       <div class="row m-auto gap-4 container-grid-lg-auris">
-        <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover bg-grey grid-lg-5 card-product-height">
+        <div class="card p-3 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover bg-grey grid-lg-5 card-product-height">
             <img src="../images/auriculares 1.png" class="card-img-top w-100" alt="article-img-1">
           <div class="card-body card-body-auriculares">
-              <h2 class="card-title fs-5"> Modelo G-435</h2>
+              <h2 class="title-size"> Modelo G-435</h2>
               <p class="card-text placeholder-wave fw-bold">49,99$</p>
               <a href="#" class="btn btn-dark btn-size-auriculares">Agregar al Carrito</a>
           </div>
         </div>
   
-        <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover bg-grey grid-lg-6 card-product-height  ">
+        <div class="card p-3 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover bg-grey grid-lg-6 card-product-height  ">
           <img src="../images/auriculares 2.png" class="card-img-top w-100 " id="second-img-auriculares" alt="article-img-2">
         <div class="card-body card-body-auriculares">
-            <h2 class="card-title fs-5"> Modelo G-733</h2>
+            <h2 class="title-size"> Modelo G-733</h2>
             <p class="card-text placeholder-wave fw-bold">67,00$</p>
             <a href="#" class="btn btn-dark btn-size-auriculares">Agregar al Carrito</a>
         </div>
       </div>
   
-      <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover bg-grey grid-lg-7 card-product-height ">
+      <div class="card p-3 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover bg-grey grid-lg-7 card-product-height ">
         <img src="../images/auriculares 3.png" class="card-img-top w-100" alt="article-img-3">
       <div class="card-body card-body-auriculares">
-          <h2 class="card-title fs-5"> Modelo G-335 Pro</h2>
+          <h2 class="title-size"> Modelo G-335 Pro</h2>
           <p class="card-text placeholder-wave fw-bold">50,00$</p>
           <a href="#" class="btn btn-dark btn-size-auriculares">Agregar al Carrito</a>
       </div>
     </div>
 
-    <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover bg-grey grid-lg-8 card-product-height">
+    <div class="card p-3 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover bg-grey grid-lg-8 card-product-height">
       <img src="../images/auriculares 4.png" class="card-img-top w-100" alt="article-img-4">
     <div class="card-body card-body-auriculares">
-        <h2 class="card-title fs-5">Modelo G-332</h2>
+        <h2 class="title-size">Modelo G-332</h2>
         <p class="card-text placeholder-wave fw-bold">25,99$</p>
         <a href="#" class="btn btn-dark btn-size-auriculares">Agregar al Carrito</a>
     </div>
@@ -211,26 +211,26 @@
 
     <h3 id="teclados">Teclados</h3>
   <article class="container-fluid pt-5  mt-5 pb-5"> 
-      <div class="row m-auto gap-4 container-grid-lg">
-        <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover bg-red grid-lg-1 card-product-height">
+      <div class="row m-auto gap-4  container-grid-lg">
+        <div class="card p-3 col-lg-2 col-md-6 col-sm-6 col-xs-6 m-auto card-hover bg-red grid-lg-1 card-product-height">
             <img src="../images/teclado 1.png" class="card-img-top w-100" alt="article-2-img-1">
           <div class="card-body card-body-auriculares">
-              <h1 class="card-title fs-5">Signature K-650</h1>
+              <h1 class="title-size">Signature K-650</h1>
               <p class="card-text placeholder-wave fw-bold">80,00$</p>
               <a href="#" class="btn btn-dark btn-size-auriculares">Agregar al Carrito</a>
           </div>
         </div>
   
-        <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover bg-red grid-lg-2 card-product-height">
+        <div class="card p-3 col-lg-2 col-md-6 col-sm-6 col-xs-6 m-auto card-hover bg-red grid-lg-2 card-product-height">
           <img src="../images/teclado 2.png" class="card-img-top w-100 " alt="article-2-img-2">
         <div class="card-body card-body-auriculares">
-            <h2 class="card-title fs-5">MX Mechanical</h2>
+            <h2 class="title-size">MX Mechanical</h2>
             <p class="card-text placeholder-wave fw-bold">85,99$</p>
             <a href="#" class="btn btn-dark btn-size-auriculares">Agregar al Carrito</a>
         </div>
       </div>
   
-      <div class="card p-5 col-lg-2 col-md-6 col-sm-8 col-xs-8 m-auto card-hover bg-red grid-lg-3 card-product-height">
+      <div class="card p-3 col-lg-2 col-md-6 col-sm-6 col-xs-6 m-auto card-hover bg-red grid-lg-3 card-product-height">
         <img src="../images/teclado 3.png" class="card-img-top w-100" alt="article-2-img-3">
       <div class="card-body card-body-auriculares">
           <h2 class="card-title fs-5">ERGO K-860</h2>
@@ -239,10 +239,10 @@
       </div>
     </div>
 
-    <div class="card p-5 col-lg-2 col-md-6  col-sm-8 col-xs-8 m-auto card-hover bg-red grid-lg-4 card-product-height">
-      <img src="../images/teclado 4.png" class="card-img-top w-100" alt="article-2-img-4">
+    <div class="card p-3 col-lg-2 col-md-6 col-sm-6 col-xs-6 m-auto card-hover bg-red grid-lg-4 card-product-height">
+      <img src="../images/teclado 4.png" class="card-img-top" alt="article-2-img-4">
     <div class="card-body card-body-auriculares">
-        <h2 class="card-title fs-5">Teclado K-835</h2>
+        <h2 class="title-size">Teclado K-835</h2>
         <p class="card-text placeholder-wave fw-bold ">82,00$</p>
         <a href="#" class="btn btn-dark btn-size-auriculares">Agregar al Carrito</a>
     </div>
