--- a/index.html
+++ b/index.html
@@ -79,38 +79,38 @@
 
 <article class="container-fluid pt-5" id="article-container"> 
     <div class="row m-auto container-fluid">
-      <div class="col-lg-4 card-aside m-auto" data-aos="zoom-in" data-aos-delay="200">
+      <div class="col-lg-4 col-sm-12 card-aside m-auto" data-aos="zoom-in" data-aos-delay="200">
         <h1>Mejora tu set-up</h1>
         <p class="placeholder-wave">Lleva al máximo tu experiencia de juego.</p>
       </div>
-      <div class="card p-5 col-lg-8 col-md-3 col-sm-8 m-auto w-25  card-color-1" data-aos="fade-left" data-aos-delay="200">
-          <img src="images/images 10.jpg" class="card-img-top w-100" alt="article-img-1">
-        <div class="card-body">
+      <div class="card p-5 col-lg-8 col-md-3 col-sm-12 m-auto card-color card-width" data-aos="fade-left" data-aos-delay="200">
+          <img src="images/images 10.jpg" class="card-img-home" alt="article-img-1">
+        <div class="card-body pt-5 pb-0">
             <a href="pages/productos.html" class="btn btn-dark btn-home-card">Más información</a>
         </div>
     </div>
 
     <div class="container-fluid pt-5 row m-auto">
-      <div class="card p-5 col-lg-8 col-md-3 col-sm-8 m-auto w-25  card-color-2" data-aos="fade-right" data-aos-delay="200">
-          <img src="images/images 11.jpg" class="card-img-top w-100" alt="article-img-2">
-        <div class="card-body">
+      <div class="card p-5 col-lg-8 col-md-3 col-sm-12 m-auto card-color card-width card-position" data-aos="fade-right" data-aos-delay="200">
+          <img src="images/images 11.jpg" class="card-img-home" alt="article-img-2">
+        <div class="card-body pt-5 pb-0">
             <a href="pages/productos.html" class="btn btn-dark btn-home-card">Más información</a>
         </div>
       </div>
-      <div class="col-lg-4 position-relative card-aside m-auto" data-aos="zoom-in" data-aos-delay="200">
+      <div class="col-lg-4 col-sm-12 text-home-relative card-aside m-auto" data-aos="zoom-in" data-aos-delay="200">
         <h2>Prueba la nueva tecnología </h2>
-        <p class="text-end">Descubre nuevos mundos.</p>
+        <p class="placeholder-wave">Descubre nuevos mundos.</p>
       </div>
     </div>
 
   <div class="container-fluid pt-5 row m-auto">
-    <div class="col-lg-4 card-aside m-auto" data-aos="zoom-in" data-aos-delay="200">
+    <div class="col-lg-4 col-sm-12 card-aside m-auto" data-aos="zoom-in" data-aos-delay="200">
       <h3>Comodidad a la hora de trabajar</h3>
       <p class="placeholder-wave">Tu nueva zona de comfort.</p>
     </div>
-    <div class="card p-5 col-lg-8 col-md-3 col-sm-8 w-25 m-auto card-color-3" data-aos="fade-left" data-aos-delay="200">
-          <img src="images/images 12.jpg" class="card-img-top w-100" alt="article-img-3">
-        <div class="card-body">
+    <div class="card p-5 col-lg-8 col-md-3 col-sm-12 m-auto card-color card-width" data-aos="fade-left" data-aos-delay="200">
+          <img src="images/images 12.jpg" class="card-img-home" alt="article-img-3">
+        <div class="card-body pt-5 pb-0">
           <a href="pages/productos.html" class="btn btn-dark btn-home-card">Más información</a>
         </div>
     </div>
