--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,7 +17,7 @@
 
 <body>
 
-    <nav  class="navbar navbar-expand-lg navbar-dark bg-dark nav-underline p-3 sticky-top">
+    <nav  class="navbar navbar-expand-lg navbar-dark bg-nav nav-underline p-3 sticky-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html"><img id="nav-img" class="rounded-circle" src="../images/favicon.png" alt="favicon">
           </a>
@@ -43,8 +43,8 @@
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-              <button class="btn btn-dark btn-dark-outline-success" type="submit"><i class="bi bi-search"></i></button>
-              <button class="btn btn-dark btn-dark-outline-success" type="input"> <i class="bi bi-cart"></i></button>
+              <button class="btn btn-dark btn-dark-outline-success btn-style" type="submit"><i class="bi bi-search"></i></button>
+              <button class="btn btn-dark btn-dark-outline-success btn-style" type="input"> <i class="bi bi-cart"></i></button>
             </form>
           </div>
         </div>
@@ -73,8 +73,8 @@
       Acepta los términos y condiciones
       </label>
     </div>
-    <button type="submit" class="btn btn-primary mb-3 mx-auto">Enviar</button>
   </div>
+  <button type="submit" class="btn btn-dark btn-style">Enviar</button>
 </div>
 </form>
 
@@ -86,16 +86,16 @@
 
         
  
-<footer class="bg-dark pt-5 pb-4 mt-5">
+<footer class="pt-5 pb-4 mt-5 bg-footer">
   <div class="container-fluid text-center">
     <div class="row text-center">
       <div class="footer-text pb-3">            
         <h5>Seguinos en nuestras redes!</h5>
       </div>
       <div class="m-auto col-xs-12">
-        <a href="https://www.instagram.com/" class="btn btn-dark "><i class="bi bi-instagram"></i></a>
-        <a href="https://es-la.facebook.com/" class="btn btn-dark "><i class="bi bi-facebook"></i></a>
-        <a href="https://twitter.com/?lang=es" class="btn btn-dark "><i class="bi bi-twitter"></i></a>
+        <a href="https://www.instagram.com/" class="btn btn-dark btn-style"><i class="bi bi-instagram"></i></a>
+        <a href="https://es-la.facebook.com/" class="btn btn-dark btn-style"><i class="bi bi-facebook"></i></a>
+        <a href="https://twitter.com/?lang=es" class="btn btn-dark btn-style"><i class="bi bi-twitter"></i></a>
       </div>
     </div>
   </div>
