Terminado funcionalidades responsive y diseño en todas las paginas

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="3000">
         <a href="pages/productos.html">
-        <img src="images/images 8.webp" class="d-block w-100" alt="foto carousel 1">
+        <img src="images/images 8.webp" class="d-block w-100 img-carousel" alt="foto carousel 1">
       </a>
       </div>
       <div class="carousel-item" data-bs-interval="3000">
         <a href="pages/productos.html">
-        <img src="images/images 7.webp" class="d-block w-100 " alt="foto carousel 2">
+        <img src="images/images 7.webp" class="d-block w-100 img-carousel" alt="foto carousel 2">
       </a>
       </div>
     </div>
