--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -51,7 +51,7 @@
       </nav>
     
 
-<main>
+<main class="main-form">
 
 <h1>Contacto</h1>
 <p>En caso de consultas, complete el formulario debajo para nosotros poder atenderlo!</p>
